Fix line breaks on small screens

--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -50,6 +50,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 }
 .commitInfo {
   font-family: Open Sans;
@@ -61,6 +62,7 @@
   display: inline-flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 }
 .commitMessage {
   font-family: Open Sans;
@@ -70,6 +72,8 @@
   line-height: 30px;
   color: #828282;
   padding-left: 6px;
+  flex-shrink: 0;
+  flex-wrap: wrap;
 }
 .badgeWrapper {
   background: #f0f0f0;
